# KnowledgeForgeAI

./: .env  README.md  graph_knowledge_demo.py  main.py  project_structure.txt  pyproject.toml  setup.py
api/: routes.py
data_collection/: news_api.py
data_preprocessing/: text_cleaner.py
knowledge_graph/: graph_manager.py
nlp/: entity_extractor.py  relationship_extractor.py
visualization/: graph_visualizer.py
