[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeforgeai"
version = "0.1.0"
description = "A knowledge graph-based news recommender system"
authors = [{name = "Usman Rana"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "networkx",
    "pandas",
    "nltk",
    "spacy",
    "requests"
] 